@@ -1,0 +1,4 @@
+package org.apache.tika.fork.unusedpackage;
+
+public class ClassInUnusedPackage {
+}
